Update swagger doc for post
