# product-api/handlers/post.go
@@ -6,6 +6,12 @@ import (
 	"github.com/peeush-agarwal/learn-golang/product-api/data"
 )
 
+// swagger:route POST /products products addProduct
+// Add a new product
+// responses:
+// 	201: noContent
+
+// AddProduct adds a new product into the data store
 func (p *Products) AddProduct(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("Handle POST Product")
 
