# product-api/swagger.yaml
@@ -50,6 +50,23 @@ paths:
                     $ref: '#/responses/productsResponse'
             tags:
                 - products
+        post:
+            description: Add a new product
+            operationId: addProduct
+            parameters:
+                - description: |-
+                    Product data structure to create or update
+                    Note: the id field is ignored by update and create operations
+                  in: body
+                  name: Body
+                  required: true
+                  schema:
+                    $ref: '#/definitions/Product'
+            responses:
+                "201":
+                    $ref: '#/responses/noContent'
+            tags:
+                - products
     /products/{id}:
         delete:
             description: Delete the specified product
@@ -64,14 +81,14 @@ paths:
                   x-go-name: ID
             responses:
                 "201":
-                    $ref: '#/responses/noContent'
+                    $ref: '#/responses/noContentResponse'
             tags:
                 - products
 produces:
     - application/json
 responses:
-    noContent:
-        description: ""
+    noContentResponse:
+        description: No content is returned by this API endpoint
     productsResponse:
         description: A list of products returned in the response
         schema:
